# rust-exercise

actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
anyhow/: Cargo.toml
anyhow/src/: main.rs
async-runtime/: Cargo.toml
async-runtime/src/: main.rs
branches/: Cargo.toml
branches/src/: main.rs
cancel/: Cargo.toml
cancel/src/: main.rs
closure/src/: lib.rs  main.rs
collections/: Cargo.toml
commandline/: Cargo.toml
custom-future/: Cargo.toml
custom-runtime/: Cargo.toml
defaults/: Cargo.toml
dyn-trait/: Cargo.toml
enums/: Cargo.toml
functions/: Cargo.toml
generics/: Cargo.toml
guessing_game/: Cargo.toml
hashmaps/: Cargo.toml
hello/: hello.html
hello_cargo/: Cargo.toml
henerics/: Cargo.toml
loops/: Cargo.toml
memo/: Cargo.toml
mini-tokio/: Cargo.toml
module/: Cargo.toml
ownership/: Cargo.toml
pin/: Cargo.toml
rayon/: Cargo.toml
rectangles/: Cargo.toml
redis-client/: Cargo.toml
reference/: Cargo.toml
regex/: Cargo.toml
restaurant/: Cargo.toml
rust-web-server/: Cargo.toml
rust-web-server/src/: hasher.rs  main.rs  route.rs  server.rs  setting.rs  signal_handling.rs  tokio-stream.rs  trace.rs
rust-web-server/src/config/: development.toml
rust-web-server/src/route/: controllers.rs
rust-web-server/src/route/controllers/: async_sync.rs  create_project.rs  feature.rs  healthz.rs
slice/: Cargo.toml
strings/: Cargo.toml
structs/: Cargo.toml
tokio-async/: Cargo.toml
tokio-io/: Cargo.toml  aaa.txt  file.txt
unSafe/: Cargo.toml
variables/: Cargo.toml
web-server/: Cargo.toml
zerocost/: Cargo.toml
(+47 files in other folders)
