[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full", "rt"] }
tokio-util = { version = "0.7.0", features = ["full"] }
axum = {version = "0.4.8"}
serde = {version = "1.0.136", features = ["derive"]} # features = ["derive"]を指定しないとderiveでSerialize, Deserialize指定できない
ctrlc = {version = "3.2.1"}
signal-hook = {version = "0.3.13", features = ["extended-siginfo"]}
sha2 = "0.10.2"
base64ct = {version = "1.4.1", features = ["alloc"]}
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
